force-app/main/default/objects/CCRM_Commercial_Stage_Action_Plan__mdt/CCRM_Commercial_Stage_Action_Plan__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to map Opportunity stage changes and related Action plan template</description>
    <label>CCRM Commercial Stage &amp; Action Plan</label>
    <pluralLabel>CCRM Commercial Stage &amp; Action Plans</pluralLabel>
</CustomObject>