force-app/main/default/objects/CCRM_Commercial_Stage_Action_Plan__mdt/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Next Stage of the opportunity</description>
    <label>Next Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>