force-app/main/default/objects/CCRM_Commercial_Stage_Action_Plan__mdt/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Opportunity Record Type</description>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>