force-app/main/default/objects/CCRM_Commercial_Stage_Action_Plan__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Name of ActionPlanTemplate</description>
    <label>Name of ActionPlanTemplate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>